# sipag-api

./: .gitignore  .pre-commit-config.yaml  apprunner.yaml  manage.py  pyproject.toml  requirements.txt  test.rest
announcements/: apps.py  consumers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
announcements/migrations/: 0001_initial.py  0002_alter_privateannouncement_options_and_more.py  0003_alter_privateannouncement_to.py  0004_pushtoken.py  0005_systemnotification_alter_privateannouncement_to.py  0006_privateannouncement_code_and_more.py
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_image_img_file.py  0003_remove_image_uri.py
auth_api/: admin.py  apps.py  auth_backends.py  filters.py  forms.py  models.py  serializers.py  signals.py  urls.py  users_urls.py  validators.py  views.py
auth_api/migrations/: 0001_initial.py  0002_alter_user_phone_number.py  0003_alter_user_photo.py  0004_alter_user_email.py
config/: sipag.nginx.conf  sipag.supervisor.conf
geography/: apps.py  models.py
geography/migrations/: 0001_initial.py
scripts/: check_requirements_txt  reload_services.sh  run_dev.sh
sipag/: __init__.py  asgi.py  celery.py  middlewares.py  settings.py  urls.py  ws_routes.py  wsgi.py
utils/: models.py
waste/: apps.py  consumers.py  helpers.py  models.py  serializers.py  signal_handlers.py  signals.py  urls.py  views.py
waste/migrations/: 0001_initial.py  0002_alter_wastereportactivity_activity.py  0002_alter_wastereportactivity_activity_timestamp_and_more.py  0003_alter_wastereportactivity_options.py  (+9 more)
(+3 files in other folders)
