[tool.poetry]
name = "sipag"
version = "0.1.0"
description = "SIPAG backend API"
authors = ["Jhonas Palad <jhonasemmanuel@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0.6"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
pyngrok = "^7.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
