[tool.poetry]
name = "sipag-api"
version = "0.1.0"
description = ""
authors = ["Jhonas Palad <jhonasemmanuel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
